--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,29 +20,24 @@ h3 {
     margin-bottom: 15px;
 }
 
-#cloud {
-    width: 100px;
-    height: 100px;
+img {
+    width: 200px;
+    height: 200px;
 }
-
-#squall {
-    width: 100px;
-    height: 100px;
-}
-
-#tidus {
-    width: 100px;
-    height: 100px;
-}
-
-#noctis {
-    width: 100px;
-    height: 100px;
-}
-
 button {
     padding: 0;
     border: none;
     background: none;
 }
 
+li {
+    font-size: 15px;
+}
+
+#enemysection {
+    display: inline
+}
+
+#herosection {
+    display: inline
+}
