--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,56 @@
-#body,
-html {
-    min-height: 100%
+body {
+    min-height: 200vh;
+    background-color: black;
 }
-#body {
-    background-image: url(../images/mainbackground.jpg);
-    background-repeat: no-repeat;
+
+
+.jumbotron {
+    background-image: url("../images/mainbackground.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+    height: 800px;
+}
+
+.card-img-top {
+    height: 200px;
+    width:  100%;
+}
+
+#character-header {
+    color: white;
+    margin: 20px;
+}
+
+.card {
+    margin-top: 20px;
+}
+
+.card-body {
+    height: 200px;
+}
+
+.selected {
+    width: 350px;
+    height: 400px;
+}
+
+#movessection {
+    text-align: center
+}
+
+#moves {
+    display: block;
+}
+
+#fight-header {
     color: white;
 }
 
-h1 {
+#message {
+    color: white;
     text-align: center;
-    font-size: 50px;
-    margin-bottom: 100px;
-}
-
-h3 {
-    font-size: 25px;
-    margin-bottom: 15px;
-}
-
-img {
-    width: 200px;
-    height: 200px;
-}
-button {
-    padding: 0;
-    border: none;
-    background: none;
-}
-
-li {
-    font-size: 15px;
-}
-
-#enemysection {
-    display: inline
-}
-
-#herosection {
-    display: inline
+    display: contents;
 }
