--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ body {
 
 .card-body {
     height: 200px;
+    display: contents;
 }
 
 .selected {
@@ -53,4 +54,8 @@ body {
     color: white;
     text-align: center;
     display: contents;
+}
+
+.list-group {
+    position: inherit
 }
